Added test container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,3 +4,6 @@ logah:
         - /var/run/docker.sock:/var/run/docker.sock
         - ./naive.py:/naive.py
     command: python naive.py
+test:
+    build: .
+    command: date
