--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,11 @@
 logah:
     build: .
+    command: python naive.py
+    environment:
+        - DEBUG
     volumes:
         - /var/run/docker.sock:/var/run/docker.sock
         - ./naive.py:/naive.py
-    command: python naive.py
 test:
     build: .
     command: date
